feat: finalize subscription and customer modules
