# src/modules/customers/customers.controller.ts
@@ -2,39 +2,50 @@ import "reflect-metadata"
 import { inject, injectable } from "inversify";
 import { TYPES } from "../../types";
 import { CustomerService } from "./customers.service";
-import { Get, Route ,Body, Post, Path, Put, Delete} from "@tsoa/runtime";
-import { CustomerInput } from "./dto/customer-input.dto";
+import { Get, Route ,Body, Post, Path, Put} from "@tsoa/runtime";
+import { CustomerInput, CustomerLoginDto } from "./dto/customer-input.dto";
 import { Customer } from "@prisma/client";
+import {ErrorHandler} from "hono"
+import { HTTPException } from "hono/http-exception";
 
 @injectable()
 @Route("/api/customers")
 export class CustomerController {
   constructor(
-    @inject(TYPES.SubscriptionService) private customerService: CustomerService
+    @inject(TYPES.CustomerService) private customerService: CustomerService
   ) {}
 
-  // List all subscription plans
-	@Get("/plans")
-  async list() {
-    return this.customerService.list();
-  }
 
 
-  // Create a new subscription plan
-	@Post("/plans")
-  async create(@Body() data: CustomerInput) {
-    return this.customerService.create(data);
-  }
+	 // get my info
+	 @Get("/me")
+	 async find(id:string) {
+		 return this.customerService.findOne(id);
+	 }
 
-  // Update an existing subscription plan
-	@Put("/plans/{id}")
+
+  // Update an existing customer
+	@Put("/{id}")
   async update(@Path() id: string,@Body() data: Partial<Omit<Customer,"id">>) {
     return this.customerService.update(id, data);
   }
 
-  // Delete a subscription plan
-	@Delete("plans/{id}")
-  async delete(@Path() id: string) {
-    return this.customerService.delete(id);
+
+	@Post('/signup')
+  async signup(@Body() data: CustomerInput): Promise<{ message: string }> {
+    const customer = await this.customerService.signup(data.email, data.password, data.name);
+    if (!customer) {
+      throw new Error('Signup failed');
+    }
+    return { message: 'Signup successful' };
+  }
+
+  @Post('/login')
+  async login(@Body() data: CustomerLoginDto): Promise<{ token: string } | null> {
+    const token = await this.customerService.login(data.email, data.password);
+    if (!token) {
+      throw new HTTPException(401,{message:"Invalid credentials"})
+    }
+    return { token };
   }
 }
