# src/modules/customers/dto/customer-input.dto.ts
@@ -1,5 +1,5 @@
 import "reflect-metadata";
-import { IsString } from "class-validator";
+import { IsOptional, IsString } from "class-validator";
 import { Customer } from "@prisma/client";
 
 
@@ -10,23 +10,58 @@ export class CustomerInput {
 	@IsString()
 	email:string;
 
-  constructor(name: string, email:string) {
+	@IsString()
+	password:string;
+
+  constructor(name: string, email:string, password:string ) {
     this.name = name;
+    this.email = email;
+		this.password = password
+  }
+}
+
+export class CustomerLoginDto{
+
+	@IsString()
+	email:string;
+
+	@IsString()
+	password:string;
+
+  constructor( email:string, password:string ) {
+    this.email = email;
+		this.password = password
+  }
+}
+
+export class CustomerUpdateDto {
+
+	@IsString()
+	@IsOptional()
+  name?: string;
+
+	@IsString()
+	@IsOptional()
+	email?:string;
+
+	@IsString()
+	@IsOptional()
+  subscriptionPlanId?: string;
+
+	@IsString()
+	@IsOptional()
+	subscriptionStatus?:string;
+
+  constructor(subscriptionPlanId: string, subscriptionStatus:string,name:string,email:string) {
+
+    this.subscriptionPlanId = subscriptionPlanId;
+    this.subscriptionStatus = subscriptionStatus;
+		this.name = name;
     this.email = email;
   }
 }
 
-export class CustomerUpdateDto extends CustomerInput {
-	@IsString()
-  subscriptionPlanId: string;
 
-	@IsString()
-	subscriptionStatus:string;
 
-  constructor(subscriptionPlanId: string, subscriptionStatus:string,name:string,email:string) {
-		super(name,email)
-    this.subscriptionPlanId = subscriptionPlanId;
-    this.subscriptionStatus = subscriptionStatus;
-  }
 
-}
+
